manifests/kind/platform/idp/keycloak_gateway.networking.k8s.io_v1_gateway_keycloak.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  annotations:
    cert-manager.io/cluster-issuer: cluster-ca
  name: keycloak
  namespace: keycloak
spec:
  gatewayClassName: envoy-gateway
  infrastructure:
    annotations:
      metallb.universe.tf/loadBalancerIPs: 172.18.0.4
  listeners:
  - hostname: auth.172.18.0.4.nip.io
    name: keycloak
    port: 443
    protocol: HTTPS
    tls:
      certificateRefs:
      - name: keycloak-gateway-tls
      mode: Terminate
